[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-groth16 = "0.3.0"
ark-r1cs-std = "0.3.1"
ark-relations = "0.3.0"
ark-serialize = "0.3.0"
ark-snark = "0.3.0"
ark-std = "0.3.0"
rand_core = "0.6.3"
scale-codec = { package = "parity-scale-codec", version = "3.1.2", optional = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", optional = true, default-features = false, features = ["derive"] }

