[package]
name = "tornado-parameters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
ark-bls12-381 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-groth16 = "0.3.0"
ark-r1cs-std = "0.3.1"
ark-relations = "0.3.0"
ark-serialize = "0.3.0"
ark-snark = "0.3.0"
ark-std = "0.3.0"
clap = { version = "3.2.7", features = ["derive"] }
derivative = "2.2.0"
hex = "0.4.3"
rand = "0.8.5"
scale-codec = { package = "parity-scale-codec", version = "3.1.2", optional = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", optional = true, default-features = false, features = ["derive"] }

